# kuda-operator

./: .env.example  Cargo.toml  Cross.toml  Dockerfile  README.md  compose.yaml  dist-workspace.toml  release.toml
.github/workflows/: ci.yml  kuda-operator-installer.sh.j2  publish.yml  release-binary.yml  release-docker.yml  release.yml
abi/: Core.json  ERC20Mintable.json  Kuda.json  Vault.json
src/: health.rs  kms.rs  lib.rs  main.rs  operator.rs  register.rs  run.rs
src/contracts/: core.rs  erc20_mintable.rs  kuda.rs  mod.rs  vault.rs
src/da/: celestia.rs  eip4844.rs  mod.rs
src/socketio/: mod.rs  model.rs
